feat: add gallery permissions hook and update image picker integration

--- a/app.json
+++ b/app.json
@@ -9,14 +9,30 @@
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "infoPlist": {
+        "NSPhotoLibraryUsageDescription": "Allow Malaria Scanner to access your photos to select images for analysis."
+      }
+    },
+    "android": {
+      "permissions": ["android.permission.READ_EXTERNAL_STORAGE", "android.permission.READ_MEDIA_IMAGES"]
     },
     "web": {
       "bundler": "metro",
       "output": "single",
       "favicon": "./assets/images/favicon.png"
     },
-    "plugins": ["expo-router", "expo-font", "expo-web-browser"],
+    "plugins": [
+      "expo-router",
+      "expo-font",
+      "expo-web-browser",
+      [
+        "expo-image-picker",
+        {
+          "photosPermission": "Allow Malaria Scanner to access your photos for analyzing blood smear images."
+        }
+      ]
+    ],
     "experiments": {
       "typedRoutes": true
     }
