--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "expo-constants": "~17.1.3",
     "expo-font": "~13.2.2",
     "expo-haptics": "~14.1.3",
-    "expo-image-picker": "~14.7.1",
     "expo-linear-gradient": "~14.1.3",
     "expo-linking": "~7.1.3",
+    "expo-media-library": "~17.1.7",
     "expo-router": "~5.0.2",
     "expo-splash-screen": "~0.30.6",
     "expo-status-bar": "~2.2.2",
@@ -43,7 +43,8 @@
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "^0.20.0",
     "react-native-webview": "13.13.5",
-    "zustand": "^4.5.0"
+    "zustand": "^4.5.0",
+    "expo-image-picker": "~16.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
